--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/victoralmeidadev/clean-react#readme",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/faker": "^5.5.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
@@ -38,5 +39,8 @@
     "lint-staged": "^10.5.4",
     "ts-jest": "^26.5.5",
     "typescript": "^4.2.4"
+  },
+  "dependencies": {
+    "axios": "^0.21.1"
   }
 }
