--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/faker": "^5.5.3",
     "@types/jest": "^26.0.22",
     "@types/node": "^14.14.41",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "eslint": "^7.24.0",
     "eslint-config-standard-with-typescript": "11",
@@ -41,6 +43,8 @@
     "typescript": "^4.2.4"
   },
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
