--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/react-dom": "^17.0.3",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^5.2.4",
     "eslint": "^7.24.0",
     "eslint-config-standard-with-typescript": "11",
     "eslint-plugin-import": "^2.22.1",
@@ -39,9 +40,14 @@
     "faker": "^5.5.3",
     "git-commit-msg-linter": "^3.1.0",
     "husky": "^6.0.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.2",
     "typescript": "^4.2.4",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
